argocd/manifests/tasksmd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasksmd
  labels:
    app.kubernetes.io/name: tasksmd
    app.kubernetes.io/managed-by: argocd
