argocd/manifests/tasksmd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasksmd
  namespace: tasksmd
  labels:
    app: tasksmd
    app.kubernetes.io/name: tasksmd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tasksmd
  template:
    metadata:
      labels:
        app: tasksmd
        app.kubernetes.io/name: tasksmd
    spec:
      containers:
        - name: tasksmd
          image: baldissaramatheus/tasks.md:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: tasksmd-data
              mountPath: /tasks
              subPath: tasks
            - name: tasksmd-data
              mountPath: /config
              subPath: config
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: tasksmd-data
          persistentVolumeClaim:
            claimName: tasksmd-data-pvc
