argocd/manifests/tasksmd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasksmd
  namespace: tasksmd
  labels:
    app: tasksmd
    app.kubernetes.io/name: tasksmd
spec:
  type: ClusterIP
  selector:
    app: tasksmd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
